# Risk_Stratification_Engine

./: .gitignore  AGENTS.md  Local_AI_Analytics_Blueprint-v2.md  Local_AI_Analytics_Blueprint.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: paths.example.yaml
docs/: prospective_collection_completion_guide.md  prospective_collection_completion_process_reference.md  prospective_collection_packet_crosswalk.md  shadow_adjudication_guide.md  shadow_collection_reviewer_guide.md  shadow_collection_reviewer_process_reference.md  shadow_packet_reference.md
extracted_malum_ui/: malum_page_12_1_Image23.jp2  malum_page_9_1_Image19.jp2
tests/: test_alert_episodes.py  test_calibration.py  test_case_diagnostic_requirements.py  test_case_review.py  test_cli.py  test_config.py  test_coverage_adjusted_thresholds.py  test_coverage_analysis.py  test_coverage_policy.py  test_coverage_source_features.py  test_coverage_source_modeling.py  test_data_quality.py  test_domain.py  test_episode_quality.py  test_evaluation.py  test_events.py  test_experiments.py  test_exposure_feature_requirements.py  test_exposure_load_context_review.py  test_exposure_load_failure_modes.py  test_exposure_load_features.py  test_exposure_load_forward_diagnostics.py  test_exposure_load_guardrail_policy.py  test_exposure_load_shadow_adjudication.py  test_exposure_load_shadow_bounded_calibration_protocol.py  test_exposure_load_shadow_bounded_calibration_stress_test.py  test_exposure_load_shadow_calibration_readiness.py  test_exposure_load_shadow_calibration_sensitivity.py  (+33 more)
(+85 files in other folders)
